Various Updates - Routine
Style corrections, new news, picture corrections.

--- a/6thgrade.html
+++ b/6thgrade.html
@@ -394,7 +394,7 @@
                                                   </div>
                                                   <!-- END FIXED BUTTONS -->
                                                   <div class="overall">
-                                                    <div class="centeredalt">
+                                                    <div class="centeredalt" style="color:white;">
                                                       <h1>
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> 6th Grade Football </center></h1>
 
@@ -429,7 +429,7 @@
             <p class="lead pl-3">Native of Greensboro, N.C.  Played three years of varsity football for Walter Hines Page high school.  Graduated in 1995 with a BS in Mathematics from North Carolina A&T State University.  Follow on career as a Naval aviator flying the EA6B and T-45 aircraft for the United States Navy.  Currently a Captain and Flex instructor for FedEx, B-757/767 aircraft.  Assistant coach for the Collierville Falcons during 2014-2015 season, Collierville Parks and Recreation Football League.  Head Coach for Collierville Dragons Grey, 3rd/4th Grade football, 2015.  Head Coach for Collierville Dragons White, 9U/10U football for highly successful 2016 season.  Current Head Coach for Collierville Dragons 6th Grade football.</p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
-            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
+            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -441,7 +441,7 @@
             <p class="lead pl-3">Coach Billy Barnett and his family have lived in Collierville TN since December 2015. Coach Barnett has ix years of youth football coaching experience after serving 21 Years in the USAF.  He has played various levels of football and says, “I’m exited to help develop our players into great football athletes and more importantly, responsible young men.”</p>
           </div>
           <div class="col-md-4 order-md-1 order-1 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/miller.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
@@ -452,7 +452,7 @@
             <p class="lead pl-3">/p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
-            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/bradley.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -464,7 +464,7 @@
             <p class="lead pl-3"></p>
           </div>
           <div class="col-md-4 order-md-1 order-1 pl-3">
-            <img class="img-thumbnail img-fluid mx-auto pl-3" src="imgs/coaches/graham.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto pl-3" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
@@ -474,7 +474,7 @@
             <p class="lead pl-3">Coach Zubor is in his 1st year coaching at Collierville.  Coach Zubor, wife Kristen and son Elek (6th Grade at Shilling Farms Middle) recently moved to Collierville from Medford, NJ.  He lettered in baseball at Lake Howell High School in Winter Park, FL</p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
-            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/davis.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -485,7 +485,7 @@
             <p class="lead pl-3">Coach Reeder is in his third year of teaching and coaching at Collierville High School. After a year of coaching Offensive and Defensive Line on the freshman level, he is now responsible for the Offensive Line for the Varsity. This is his 15th year overall, with stops at Cordova High School (6) and Germantown High School (6) previously. He just celebrated his 19th anniversary to his wife Kimberly Reeder and has one daughter, Chloe Reeder (12) who is a middle school Dragon. He teaches US Government and AP Psychology at school.</p>
           </div>
           <div class="col-md-4 order-md-1 order-1 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/reeder.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -498,7 +498,7 @@
 </p>
           </div>
           <div class="col-md-4 order-md-2 order-1 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/pelliterri.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
