--- a/freshman.html
+++ b/freshman.html
@@ -394,7 +394,7 @@
                                                   </div>
                                                   <!-- END FIXED BUTTONS -->
                                                   <div class="overall">
-                                                    <div class="centeredalt">
+                                                    <div class="centeredalt" style="color:white;">
                                                       <h1>
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Freshman Football </center></h1>
 
@@ -430,7 +430,7 @@
             <p class="lead pl-3">Eric Wiley is the Head Coach for the Freshmen team. He is in his 14th year of coaching young men. Eric is married to Cecilee, they have three children: Cade, Seth, and Kacy. Eric’s words to live by: “Show class, have pride, and display character. If you do, winning takes care of itself” —Paul “Bear” Bryant.</p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
-            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
+            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -442,7 +442,7 @@
             <p class="lead pl-3">Patrick is the defensive coordinator for the Freshman team. He graduated from Fort Smith Northside in 1988, where he won a state championship as a starting Linebacker. He then attended the University of Central Arkansas on Football Scholarship from 1988–1993, He was the starting outside linebacker from 1989-1992 and then were NAIA conf. champions all 4 years 1989 – 1992 and NAIA Champions 1991. Coach Elam graduated with a BBA degree in 1993 and then came to Memphis working for FedEx in 1993 as a handler. Patrick is now the Vice President of the FedEx World Hub.</p>
           </div>
           <div class="col-md-4 order-md-1 order-1 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/miller.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
@@ -453,7 +453,7 @@
             <p class="lead pl-3">Leonardo (Leon) Floyd native of Ocala Florida where he attended Forest High School where he played football for four years as a wide receiver and defensive back.  After graduating from high school in 1979,  he received a scholarship to Tennessee State University(TSU) Nashville, TN where he lettered four years as a wide receiver. After completing his colleague career he was drafted by the Memphis Showboats of United States Football League (USFL) where he was member during 1984 and 1985 seasons.  During the fall of 1984 he returned TSU as a Graduate Assistant Coach, where he coached quarterbacks and receivers. During that season, the team succesfully went 11-0.  In 1986, Coach Floyd, joined the staff at Albany State University, where served as Offensive Coordinator and coached quarterbacks and receivers. Coach Floyd, after leaving coaching for more than 20 years to work in Federal Government, returned to coaching as the receiver coach for the Collierville Dragons’ Eight Grade Team. Starting the 2017 season, Coach Floyd joins the staff of the Ninth (Freshman) Grade  Collierville Dragons Team.</p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
-            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/bradley.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
         
