--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                                       </section>
                                       <!-- end background image -->
                                       <!-- MODALS FOR ALL THE COACHES -->
-                                       <div id="varsityschedule" style="overflow-y:scroll" class="modal">
+                                      <div id="varsityschedule" style="overflow-y:scroll" class="modal">
                                                 <div class="modal-content">
                                                   <h4>Varsity Football Schedule</h4>
                                                   <p><table style="color:black;">
@@ -212,36 +212,65 @@
                                                         <th>Time</th>
                                                         <th>Location</th>
                                                       </tr>
-                                                      <tr>
-                                                        <td>August 21st</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Arlington</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>August 28th</td>
-                                                        <td>6:30 PM</td>
-                                                        <td>Ridgeway</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>September 11th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>Munford</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>September 18th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Cordova</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>September 25th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Houston</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>October 16th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Bartlett</td>
-                                                      </tr>
+                                                     <td>August 17th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Olive Branch</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>August 24th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>@ Center Hill</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>August 31st</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Bartlett*</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>September 7th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Germantown</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>September 14th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Cordova*</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>September 21st</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Wooddale (HC)</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>September 28th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>@ Central*</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>October 5th</td>
+                                                        <td>BYE WEEK</td>
+                                                        <td>BYE WEEK</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>October 12th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>Vs. ST. George</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>October 19th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>@ Houston*</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>October 26th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>@ Arlington</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>November 2nd</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>Playoff Week</td>
+                                                        </tr>
                                                     </tbody>
                                                   </table>
                                                     </p>
@@ -252,6 +281,7 @@
                                                     <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Done</a>
                                                   </div>
                                                 </div>
+
 
                                       <div id="varsitycoach" class="modal">
                                         <div class="modal-content">
