--- a/seasonticket.html
+++ b/seasonticket.html
@@ -321,7 +321,7 @@
                                                     </a>
                                                   </div>
                                                   <!-- END FIXED BUTTONS -->
-                                                  <div class="overall">
+                                                  <div style="padding-left: 40%;" class="overall">
                                                   <div class="centered">
                                                     <h1>
                                                     <div class="spacer3">
@@ -329,9 +329,9 @@
                                                     </h1>
                                                     </div>
                                                   </div>
-                                                  <p class="pl-3"><h2>Hello Dragon Families!</h2><br><br>
+                                                  <div class="pl-4 pr-4"><h2>Hello Dragon Families!</h2><br><br><p>
  
-Another football season is just around the corner and we can't wait to see the 2018 Dragons take the field!  This e-mail contains important information on renewing and purchasing season tickets for the 2018 Collierville Dragons football season.<br><br>  
+Another football season is just around the corner and we can't wait to see the 2018 Dragons take the field!  This contains important information on renewing and purchasing season tickets for the 2018 Collierville Dragons football season.<br><br>  
  
 As you know, the Dragons will be moving to our new, state-of-the-art football stadium with the completion of our new high school!  The new stadium is still in the construction phase, so the exact seating layout is not yet known.  We will do our best to seat you in the same general vicinity of where your tickets were located at the former Dragon Stadium (Herman Osteen Field).  Tickets will be $100 each this year, with on-line registration and payment through June 30th for current/renewing season ticket holders.  After June 30th, season ticket sales will be open to the general public.  Current season ticket holders will be seated first, current ticket holders with requests to change seats will be seated next, and new ticket holders will be assigned seats last.<br><br>
 
