--- a/varsity.html
+++ b/varsity.html
@@ -265,36 +265,65 @@
                                                         <th>Time</th>
                                                         <th>Location</th>
                                                       </tr>
-                                                      <tr>
-                                                        <td>August 21st</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Arlington</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>August 28th</td>
-                                                        <td>6:30 PM</td>
-                                                        <td>Ridgeway</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>Septempber 11th</td>
-                                                        <td>6:00 PM</td>
-                                                        <td>Munford</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>September 18th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Cordova</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>September 25th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Houston</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>October 16th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Bartlett</td>
-                                                      </tr>
+                                                     <td>August 17th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Olive Branch</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>August 24th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>@ Center Hill</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>August 31st</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Bartlett*</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>September 7th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Germantown</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>September 14th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Cordova*</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>September 21st</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>VS Wooddale (HC)</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>September 28th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>@ Central*</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>October 5th</td>
+                                                        <td>BYE WEEK</td>
+                                                        <td>BYE WEEK</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>October 12th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>Vs. ST. George</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>October 19th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>@ Houston*</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>October 26th</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>@ Arlington</td>
+                                                        </tr>
+                                                        <tr>
+                                                        <td>November 2nd</td>
+                                                        <td>7:00 PM</td>
+                                                        <td>Playoff Week</td>
+                                                        </tr>
                                                     </tbody>
                                                   </table>
                                                     </p>
@@ -487,9 +516,9 @@
                                                   </div>
                                                   <!-- END FIXED BUTTONS -->
                                                   <div class="overall">
-                                                    <div class="centeredalt">
+                                                    <div class="centeredalt" style="color:white;">
                                                       <h1>
-                                                        <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Varsity/ JV Football </center></h1>
+                                                        <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;">  Varsity/ JV Football </center></h1>
 
                                                 <div class="spacer">
                                                 <div class="spacer2"></div>
@@ -529,11 +558,20 @@
           <div class="col-md-7 order-md-1 order-2">
             <h2 class="featurette-heading pl-3 ">Mike O'Neill
             <br><span class="text-muted">Head Coach</span></h2>
-            <p class="lead pl-3">Mike has been the head coach of the Varsity Collierville Dragons since 2012. From 2010–2011 Coach O’Neill served as the defensive coordinator and head strength coach. He also teaches Business Education at Collierville High. Coach O’Neill began coaching at the age of 18 working with the Germantown Middle School team for eight years. Prior to joining the CHS staff, Mike coached for nine years at Christian Brothers High School serving as defensive coordinator for six years. In 2005, CBHS was the State Championship Runner-Up. Before making a career change into education in 2000, Mike worked in the business world in sales and marketing. Mike is a graduate of Germantown High School where he lettered in Football and Baseball. As a student he won two state championships: he was a starting safety for the 1983 football team and catcher for the 1981 baseball team. Coach O’Neill was inducted into the Germantown Baseball Hall of Fame in 1997. He went on to play baseball for Memphis State University.</p>
+            <p class="lead pl-3">Mike has been the head coach of the Varsity Collierville Dragons since 2012. From 2010–2011 Coach O’Neill served as the defensive coordinator and head strength coach. He also teaches Business Education at Collierville High. Coach O’Neill began coaching at the age of 18 working with the Germantown Middle School team for eight years. Prior to joining the CHS staff, Mike coached for nine years at Christian Brothers High School serving as defensive coordinator for six years. In 2005, CBHS was the State Championship Runner-Up. Before making a career change into education in 2000, Mike worked in the business world in sales and marketing. Mike is a graduate of Germantown High School where he lettered in Football and Baseball. As a student he won two state championships: he was a starting safety for the 1983 football team and catcher for the 1981 baseball team. Coach O’Neill was inducted into the Germantown Baseball Hall of Fame in 1997. He went on to play baseball for Memphis State University. Recently, Coach O'Neill has been the recipient of the 2017 Coach of the year award, as well as the Mario Reed Courage Award.</p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
-            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
+            <div class="column">
+              <div class="row">
+            <img class="img-fluid mx-auto img-thumbnail"  src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
+            </div>
+            <div class="row">
+            <img class="img-fluid mx-auto img-thumbnail" style="max-height:200px; margin-top:5%;transform: rotate(90deg);" src="imgs/Coach_courage.jpeg" alt="Generic placeholder image">
+             </div>
+             <div class="row">
+            <img class="img-fluid mx-auto img-thumbnail" style="max-height:200px; margin-top:5%;margin-bottom:10%;transform: rotate(90deg);" src="imgs/Coach_year.jpeg" alt="Generic placeholder image">
           </div>
+          </div></div>
         </div>
 
 
