--- a/7thand8thgrade.html
+++ b/7thand8thgrade.html
@@ -552,7 +552,7 @@
                                                   </div>
                                                   <!-- END FIXED BUTTONS -->
                                                   <div class="overall">
-                                                    <div class="centeredalt">
+                                                    <div class="centeredalt" style="color:white;">
                                                       <h1>
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> 7th and 8th Grade Football </center></h1>
 
@@ -621,7 +621,7 @@ make up of players. The following are important dates and information.<br>
             <p class="lead pl-3"></p>
           </div>
           <div class="col-md-4 ml-3 order-md-1 order-1">
-            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
+            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -632,7 +632,7 @@ make up of players. The following are important dates and information.<br>
             <p class="lead pl-3">Entering his 10th year coaching in the middle school league. This is his 2nd year at Collierville after spending 8 years at Arlington.  He has coached in 6 out of 7 championship games since the league created a championship game in 2010. Coach Hardy is married to his wife Stacie and has a son named Landon. 3 year football letterman from Houston High School during 1995-1998.</p>
           </div>
           <div class="col-md-4 order-md-2 order-1 ml-3">
-            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/oneill.jpg" alt="Generic placeholder image">
+            <img class="img-fluid mx-auto img-thumbnail" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -644,7 +644,7 @@ make up of players. The following are important dates and information.<br>
             <p class="lead pl-3"> 2nd year coaching at Collierville. 3 year football letterman and captain for Arlington High School. Currently attends the University of Memphis.</p>
           </div>
           <div class="col-md-4 order-md-1 order-1 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/miller.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto " src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
@@ -655,7 +655,7 @@ make up of players. The following are important dates and information.<br>
             <p class="lead pl-3">4th year coaching at Collierville. 3 year football letterman at Colllierville High School.</p>
           </div>
           <div class="col-md-4 ml-3 order-md-2 order-1">
-            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/bradley.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
@@ -667,7 +667,7 @@ make up of players. The following are important dates and information.<br>
             <p class="lead pl-3">1st year coaching at Collierville. 3 year football letterman at Collierville High School. Currently attends the University of Memphis.</p>
           </div>
           <div class="col-md-4 oorder-md-1 order-1 pl-3">
-            <img class="img-thumbnail img-fluid mx-auto pl-3" src="imgs/coaches/graham.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto pl-3" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
         <div class="row featurette">
@@ -677,7 +677,7 @@ make up of players. The following are important dates and information.<br>
             <p class="lead pl-3">1st year coaching at Collierville. Coach Henderson is married to his wife Tiffanee and has 3 kids: Joya (Jr. at U of M), Jordan (Jr. at Collierville High and Varsity WR) and Savannah (5th grade at Sycamore Elementary).</p>
           </div>
           <div class="col-md-4 order-md-2 order-1 ml-3">
-            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/davis.jpg" alt="Generic placeholder image">
+            <img class="img-thumbnail img-fluid mx-auto" src="imgs/coaches/nocoachpng.png" alt="Generic placeholder image">
           </div>
         </div>
 
