--- a/schedule.html
+++ b/schedule.html
@@ -287,12 +287,15 @@
 
 </div>
 <!-- END FIXED BUTTONS -->
-
+<div class="spacer3">
+</div>
+<div class="spacer2">
+</div>
 <div class="altschedule"> 
 <h1> <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Schedule of Events </center> </h1>
 <iframe src="https://calendar.google.com/calendar/embed?src=npuap45cajnn5ks7pi64a1ntrk%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0;display:block;margin: 0 auto;width:85%;" width="800" height="600" frameborder="0" scrolling="no" align="middle"></iframe>
 </div>
-
+</div>
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js'></script>
 
