--- a/sponsors.html
+++ b/sponsors.html
@@ -488,7 +488,7 @@
                                                   </div>
                                                   <!-- END FIXED BUTTONS -->
                                                   <div class="overall">
-                                                    <div class="centeredalt">
+                                                    <div class="centeredalt" style="color:white;">
                                                       <h1>
                                                         <center style="color:#722D3C;text-shadow:-1px -1px 0 #fff,1px -1px 0 #fff,-1px 1px 0 #fff,1px 1px 0 #fff;"> Sponsoring Collierville Football </center></h1>
 
