Updated team football schedules
Livi

--- a/varsity.html
+++ b/varsity.html
@@ -347,34 +347,54 @@
                                                         <th>Location</th>
                                                       </tr>
                                                       <tr>
-                                                        <td>August 21st</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Arlington</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>August 28th</td>
-                                                        <td>6:30 PM</td>
-                                                        <td>Ridgeway</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>Septempber 11th</td>
+                                                        <td>August 20th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>Munford</td>
+                                                        <td>@ Arlington</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>September 18th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Cordova</td>
+                                                        <td>August 27th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Ridgeway (JV Only)</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>September 25th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Houston</td>
+                                                        <td>August 27th</td>
+                                                        <td>6:30 PM</td>
+                                                        <td>vs Covington (9th grade Only)</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>October 16th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Bartlett</td>
+                                                        <td>August 30th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Munford</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>Septempber 6th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Fayette Ware (Thursday, 9th grade Only)</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>Septempber 10th</td>
+                                                        <td>5:30 PM</td>
+                                                        <td>vs Braircrest</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 17th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Cordova</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 24th</td>
+                                                        <td>5:30 PM</td>
+                                                        <td>@ Houston</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>October 1st</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs White Station</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>October 15th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Bartlett</td>
                                                       </tr>
                                                     </tbody>
                                                   </table>
