--- a/freshman.html
+++ b/freshman.html
@@ -284,34 +284,49 @@
                                                         <th>Location</th>
                                                       </tr>
                                                       <tr>
-                                                        <td>August 21st</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Arlington</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>August 28th</td>
-                                                        <td>6:30 PM</td>
-                                                        <td>Ridgeway</td>
-                                                      </tr>
-                                                      <tr>
-                                                        <td>Septempber 11th</td>
+                                                        <td>August 20th</td>
                                                         <td>6:00 PM</td>
-                                                        <td>Munford</td>
+                                                        <td>@ Arlington</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>September 18th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Cordova</td>
+                                                        <td>August 27th</td>
+                                                        <td>6:30 PM</td>
+                                                        <td>vs Covington</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>September 25th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>Houston</td>
+                                                        <td>August 30th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Munford</td>
                                                       </tr>
                                                       <tr>
-                                                        <td>October 16th</td>
-                                                        <td>7:30 PM</td>
-                                                        <td>@ Bartlett</td>
+                                                        <td>September 6th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Fayette Ware</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>Septempber 10th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Braircrest</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 17th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Cordova</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>September 24th</td>
+                                                        <td>5:30 PM</td>
+                                                        <td>@ Houston</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>October 1st</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs White Station</td>
+                                                      </tr>
+                                                      <tr>
+                                                        <td>October 15th</td>
+                                                        <td>6:00 PM</td>
+                                                        <td>vs Bartlett</td>
                                                       </tr>
                                                     </tbody>
                                                   </table>
